--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -4425,6 +4425,7 @@ only screen and (min-resolution: 2dppx) {
     letter-spacing: 5px;
     min-width: 218px;
     padding: 25px 30px;
+    margin: 0.5em auto;
 }
 .button--small,
 .box-modal form button,
@@ -6719,15 +6720,19 @@ figure.nav-overlay {
         text-align: right;
         position: absolute;
         left: 0;
-        bottom: -2.5em;
-        margin-top: 1em;
         opacity: 0.6;
-        right: 0;
+        right: 1em;
+        line-height: 1.8em;
     }
 }
-@media (min-width: 435px) {
+@media (min-width: 768px) {
     .main--story .module figcaption {
-        right: 6em;
+        right: 4em;
+    }
+}
+@media (min-width: 496px) {
+    .main--story .module figcaption {
+        bottom: -2.5em;
     }
 }
 .module-wrap--story {
@@ -6736,18 +6741,23 @@ figure.nav-overlay {
 }
 @media (min-width: 770px) {
     .module-wrap--story {
-        padding-top: 20%;
+        padding-top: 22%;
     }
 }
 @media (min-width: 900px) {
     .module-wrap--story {
-        padding-top: 12%;
+        padding-top: 13%;
     }
 }
 @media (min-width: 1200px) {
     .module-wrap--story {
-        padding-top: 8%;
+        padding-top: 7%;
     }
+}
+@media (min-width: 1658px) {
+    .module-wrap--story {
+        padding-top: 6.5%;
+     }
 }
 .module-wrap--story {
     & .module {
@@ -6757,16 +6767,18 @@ figure.nav-overlay {
         padding: 0;
     }
 }
-@media (min-width: 992px) {
-    .module-wrap--story .module {
-        padding: 30px 0;
-    }
-}
 @media (min-width: 900px) {
     .module-wrap--story .module:first-of-type {
-        padding-top: 240px;
+        padding-top: 220px;
     }
 }
+
+@media (min-width: 1200px) {
+    .module-wrap--story .module:first-of-type {
+        padding-top: 250px;
+     }
+}
+
 .module-wrap--story {
     & .accent-heading {
         color: #000000;
@@ -6860,11 +6872,14 @@ figure.nav-overlay {
         padding-top: 18%;
         min-height: 380px;
     }
+    & .page-intro__sub {
+    margin-top: 0.5em;
+    }
 }
 @media (min-width: 900px) {
     .page-intro--lived-experience .page-intro__content {
         min-height: 420px;
-        padding-top: 220px;
+        padding-top: 210px;
     }
 }
 .module-wrap--background,
@@ -6951,11 +6966,6 @@ figure.nav-overlay {
 .module-wrap--background .module__head {
     font-size: 2em;
 }
-@media (min-width: 1600px) {
-    .module-wrap--background {
-        max-height: 508px;
-    }
-}
 @media (min-width: 1399px) {
     main .module-wrap--background .button-callout{
         margin-top: 1%;
@@ -6967,7 +6977,7 @@ figure.nav-overlay {
 }
 @media (min-width: 1200px) {
     .module-wrap--background .button-callout {
-        padding: 4% 1% 1% 1%;
+        padding: 4.5% 1% 3.5% 1%;
     }
 }
 .module-wrap--background .module__body {
@@ -7060,7 +7070,7 @@ figure.nav-overlay {
 }
 aside {
     & .module-wrap--background {
-        padding-top: 5%;
+        padding-top: 7%;
         padding-bottom: 0;
         background-position: 55%;
         transition: background-position 150ms ease-in;
@@ -7073,14 +7083,26 @@ aside {
         flex-wrap: wrap
     }
 }
+@media (min-width: 450px) {
+    aside .module-wrap--background {
+        padding-top: 5%;
+    }
+}
+@media (min-width: 992px) {
+    aside .module-wrap--background {
+        padding-top: 4%;
+    }
+}
+
 @media (min-width: 1400px) {
     aside .module-wrap--background {
         background-position: 53%;
+        padding-top: 2%;
     }
 }
-@media (min-width: 1300px) {
+@media (min-width: 1600px) {
     aside .module-wrap--background {
-        padding-top: 3%;
+        padding-top: 1.5%;
     }
 }
 aside .module-wrap--background .module__head {
@@ -7138,19 +7160,14 @@ aside .module-wrap--background .module__head {
     margin-top: 2em;
     margin-bottom: 2em;
     position: relative;
-    padding-top: 0px;
-    padding-bottom: 56.25%;
-    height: 0;
+    padding: 0 0 56.9% 0;
+    height: 100%;
     overflow: hidden;
     max-width: 100%;
     transition: all 500ms ease-in;
     display: block;
+    background-color: #f1efec;
 }
-.sprout-video-container.inline {
-    display: inline-block;
-    padding-bottom: 40%;
-}
-
 .sprout-video-container .embed-video {
     position: absolute;
     top: 0;
@@ -7160,6 +7177,12 @@ aside .module-wrap--background .module__head {
     height: 100%;
     margin-left: -1px;
     transition: all 500ms ease-in;
+    background-color: #f1efec;
+}
+@media (min-width: 992px) {
+    .sprout-video-container .embed-video {
+        height: 99%;
+    }
 }
 .button--video {
     position: absolute;
@@ -7170,7 +7193,7 @@ aside .module-wrap--background .module__head {
     z-index: 2;
     width: 200px;
     max-width: 100%;
-    top: 43%;
+    top: 38%;
     height: 2.5em;
     font-size: 0.65em;
     border: 0;
@@ -7184,6 +7207,17 @@ aside .module-wrap--background .module__head {
         font-size: 0.85em;
     }
 }
+@media (min-width: 768px) {
+    .button--video {
+        top: 40%;
+    }
+}
+@media (min-width: 992px) {
+    .button--video {
+        top: 41%;
+    }
+}
+
 .button--video__overlay {
     position: absolute;
     left: 0;
