add styling fixes for alt phone field

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1564,6 +1564,7 @@ div.noOrg-container span {
   height: 40px !important;
 }
 #createProfileForm #phone,
+#createProfileForm #altPhone,
 #createProfileForm #email {
   width: 350px;
   max-width: 100%;
@@ -1908,7 +1909,8 @@ table.profile-audit-log TH,
   max-width: 100%;
 }
 #phone,
-#email {
+#email,
+#altPhone {
   width: 300px;
   max-width: 100%;
 }
