--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1403,6 +1403,7 @@ div.noOrg-container span {
   height: 40px !important;
 }
 #createProfileForm #phone,
+#createProfileForm #altPhone,
 #createProfileForm #email {
   width: 350px;
   max-width: 100%;
@@ -1718,7 +1719,8 @@ table.profile-audit-log TH,
   max-width: 100%;
 }
 #phone,
-#email {
+#email,
+#altPhone {
   width: 300px;
   max-width: 100%;
 }
