--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1676,7 +1676,7 @@ div.noOrg-container {
   select{
     height: 40px !important;
   }
-  #phone, #email {
+  #phone, #email, #altPhone {
     width: 350px;
     max-width: 100%;
   }
@@ -2044,7 +2044,7 @@ div.noOrg-container {
   }
 }
 
-#phone, #email {
+#phone, #email, #altPhone  {
   width: 300px;
   max-width: 100%;
 }
