partner user home page styling fixes

--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -7479,29 +7479,48 @@ aside .module--flex {
     padding: 20px;
 }
 .home--items-wrapper .link-container {
-    margin: 0 1em 2em 1.1em;
+    max-width: 800px;
     display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
+    justify-content: space-between;
+    margin: 0 1em 0 1.2em;
+}
+@media (min-width: 681px) {
+    .home--items-wrapper .link-container {
+        margin: 0 auto;
+    }
+}
+@media (min-width: 901px) {
+    .home--items-wrapper .link-container {
+        margin: 0 auto 4em auto;
+    }
 }
 .home--items-wrapper .link-box {
     padding: 1em;
     height: 5em;
     min-height: 4em;
     max-width: 100%;
-    margin: 0.5em 0.2em;
+    margin: 1em auto;
     text-align: center;
-    color: #BCC2A6;
+    color: #FFF;
     text-transform: uppercase;
     letter-spacing: 2px;
-    background-color: rgba(57, 56, 51, 0.8);
+    background-color: #7C959E;
+    border: 1px #7C959E solid;
     cursor: pointer;
 }
-.home--items-wrapper .link-box a {
-    color: #BCC2A6;
+@media (min-width: 901px) {
+    .home--items-wrapper .link-box {
+        margin: 0.5em auto;
+        width: 330px;
+        max-width: 100%;
+    }
 }
-.home--items-wrapper .link-box a:hover {
+.home--items-wrapper .link-box a {
     color: #FFF;
+}
+.home--items-wrapper .link-box:hover {
+    background: #576e76;
+    border: #576e76;
 }
 .home--registration-container p {
     font-size: 1.1em;
