--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -851,6 +851,7 @@ h4.detail-title {
 }
 #patientsInstrumentList.ready + #instrumentListLoad {
   opacity: 0;
+  z-index: -1;
 }
 #instrumentListLoad {
   position: absolute;
@@ -859,6 +860,7 @@ h4.detail-title {
   margin: 1.5em;
   opacity: 1;
   transition: opacity 250ms ease-out;
+  z-index: 1;
 }
 #patientsDownloadTypeList {
   margin-top: 0.5em;
