--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -941,8 +941,10 @@ h4.detail-title {
   transition: opacity 250ms ease-in;
   &.ready {
     opacity: 1;
+    z-index: 1;
     & + #instrumentListLoad {
       opacity: 0;
+      z-index: -1;
     }
   }
 }
