--- a/portal/templates/gil/portal.html
+++ b/portal/templates/gil/portal.html
@@ -1,4 +1,5 @@
-{% extends "gil/base.html" %}
+{%- from "gil/macros.html" import footerHTML -%}
+{%- extends "gil/base.html" -%}
 {% block main %}
 {{ super() }}
 <main id="portalMain" class="main home--container">
@@ -62,22 +63,7 @@
     </section>
     <br class="clearfix"/>
     <br/>
-    <footer class="footer home--footer-container">
-        <div class="footer__logo-area">
-          <figure class="footer__logo--truenth"></figure>
-        </div>
-        <ul class="nav-list nav-list--lower">
-          <li class="nav-list__item"><a href="{{PORTAL}}/about">About</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
-        </ul>
-        <ul class="nav-list nav-list--lower">
-          <li class="nav-list__item"><a href="{{PORTAL}}/terms-and-conditions">Terms and Conditions</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/privacy">Privacy</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/contact">Contact</a></li>
-        </ul>
-        <div class="footer__logo-area"><a href="http://www.movember.com" target="_blank">
-            <figure class="footer__logo--movember"></figure></a></div>
-      </footer>
+    {{footerHTML("home--footer-container")}}
 </main>
 {% endblock %}
 {% block footer %}
