fix display of study Id in patients list and profile

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -328,11 +328,21 @@ select:not([multiple]) {
   #enterManualInfoContainer {
     margin-bottom: 1em;
   }
+  #study_id_view {
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
+  }
+  .study-id-view td {
+    margin-top: 0.4em;
+  }
 }
 
 @media (max-width: 1199px) {
   #mainDiv.profile .footer-container.flex{
     justify-content: center;
+  }
+  #adminTable .study-id-field {
+    display: none;
   }
 }
 
