--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -272,9 +272,19 @@ select:not([multiple]) {
 #mainDiv.profile #enterManualInfoContainer {
   margin-bottom: 1em;
 }
+#mainDiv.profile #study_id_view {
+  margin-top: 0.4em;
+  margin-bottom: 0.4em;
+}
+#mainDiv.profile .study-id-view td {
+  margin-top: 0.4em;
+}
 @media (max-width: 1199px) {
   #mainDiv.profile .footer-container.flex{
     justify-content: center;
+  }
+  #adminTable .study-id-field {
+    display: none;
   }
 }
 /** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
@@ -852,7 +862,7 @@ div.right-panel {
 }
 #patientList .email-field,
 #staffList .email-field {
-  max-width: 235px;
+  max-width: 200px;
   word-wrap: break-word;
 }
 #patientListOptions,
@@ -1417,9 +1427,6 @@ div.right-panel {
 }
 #mainDiv.profile .profile-item-container .view-container td {
   padding: 0.6em 1em;
-}
-#mainDiv.profile .profile-item-container .view-container tr.study-id-view td {
-  padding: 0.6em 1em 0 1em;
 }
 #mainDiv.profile .profile-item-container .view-container td:first-of-type {
   display: inline-block;
