--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -37,7 +37,7 @@
 @bodyBgColor:      #FFF;
 @baseColor:       #333;
 @linkColor:       #333;
-@linkHover:       #909698;
+@linkHover:       #576e76;
 @btnColor:        #7C959E;
 @featureBtnColor: #7C959E;
 @featureBtnHoverColor: #FFF;
@@ -705,7 +705,7 @@ div.right-panel {
     display: inline-block;
     div.dropdown-menu {
       #userOrgs {
-        width: 300px;
+        width: 350px;
         max-width: 100%;
         padding: 0 0.5em 0 1em;
         margin: 0 auto;
@@ -718,9 +718,8 @@ div.right-panel {
       display: block;
       margin: -0.4em 0;
       label.org-label {
-        margin: -5em 0;
         font-size: 1em;
-        display: inline;
+        display: inline-block;
       }
     }
     #orglist-footer-container {
@@ -1732,7 +1731,7 @@ div.noOrg-container {
   #bdGroup {
     margin-bottom: 0.1em;
     padding-bottom: 0;
-    min-height: 120px;
+    min-height: 124px;
   }
 }
 .left-indent-bottom {
