--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -36,7 +36,7 @@
 @bodyBgColor:      #FFF;
 @baseColor:       #333;
 @linkColor:       #4d4e50;
-@linkHover:       #606a73;
+@linkHover:       #576e76;
 @btnColor:        #606a73;
 @inputBorderColor: #bdb9b9;
 @featureBtnColor: #333;
@@ -666,9 +666,8 @@ h4.detail-title {
       display: block;
       margin: -0.4em 0;
       label.org-label {
-        margin: -5em 0;
         font-size: 1em;
-        display: inline;
+        display: inline-block;
       }
     }
     #orglist-footer-container {
@@ -1657,7 +1656,7 @@ div.noOrg-container {
 .create-account-container #bdGroup {
   margin-bottom: 0.1em;
   padding-bottom: 0;
-  min-height: 120px;
+  min-height: 124px;
 }
 
 .indent {
