--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -47,7 +47,7 @@ a {
 }
 a:hover,
 a:active {
-  color: #5f676e;
+  color: #576e76;
 }
 a.disabled {
   opacity: 0.6;
@@ -109,8 +109,8 @@ a.btn {
 .btn-tnth-primary.active,
 .open > .dropdown-toggle.btn-tnth-primary {
   color: #fff;
-  background-color: #2a4531;
-  border-color: #1c2f21;
+  background-color: #576e76;
+  border-color: #576e76;
 }
 .btn-tnth-back {
   color: #777;
@@ -185,6 +185,7 @@ select:not([multiple]) {
 .feature-btn-primary:hover,
 .feature-btn-primary:active {
   color: #FFF;
+  background-color: #576e76;
 }
 #mainHolder {
   visibility: hidden;
@@ -287,7 +288,7 @@ select:not([multiple]) {
   max-width: 130px;
 }
 #stickyMenu li:hover {
-  color: #337ab7;
+  color: #576e76;
   transform: scale(1.05);
 }
 a.open,
@@ -608,9 +609,8 @@ h4.detail-title {
   margin: -0.4em 0;
 }
 #adminTableToolbar div.orglist-selector div.org-container label.org-label {
-  margin: -5em 0;
   font-size: 1em;
-  display: inline;
+  display: inline-block;
 }
 #adminTableToolbar div.orglist-selector #orglist-footer-container {
   padding: 0 0.5em;
@@ -672,8 +672,8 @@ h4.detail-title {
 }
 .access-button:hover {
   color: #fff;
-  background-color: #2a4531;
-  border-color: #1c2f21;
+  background-color: #576e76;
+  border-color: #576e76;
 }
 #accessCodeWrapper {
   margin: 0 auto;
@@ -786,8 +786,8 @@ h4.detail-title {
 }
 #indexNavBar span.link:hover {
   color: #fff;
-  background-color: #2a4531;
-  border-color: #1c2f21;
+  background-color: #576e76;
+  border-color: #576e76;
 }
 #indexNavBar #indexNavBar span:hover {
   color: #606a73;
@@ -1184,7 +1184,7 @@ h4.detail-title {
 #mainDiv.profile .profile-item-edit-btn:active,
 #mainDiv.profile .profile-item-edit-btn:focus {
   color: #FFF;
-  background-color: #606a73;
+  background-color: #576e76;
 }
 #mainDiv.profile .profile-item-edit-btn::before {
   content: "EDIT";
@@ -1263,7 +1263,7 @@ h4.detail-title {
 }
 #createUserLink:hover {
   color: #FFF;
-  background: #333;
+  background: #576e76;
 }
 .profile-create-item-container {
   border-radius: 8px;
@@ -1522,7 +1522,7 @@ table.profile-audit-log TH,
 .create-account-container #bdGroup {
   margin-bottom: 0.1em;
   padding-bottom: 0;
-  min-height: 120px;
+  min-height: 124px;
 }
 .indent {
   padding: 0 1.5em;
@@ -1733,28 +1733,28 @@ table.profile-audit-log TH,
   font-size: 0.93em;
 }
 .pagination > .active > a {
-  background-color: #606a73;
-  border-color: #606a73;
+  background-color: #7C959E;
+  border-color: #7C959E;
 }
 .pagination > .active > a:focus {
   background-color: #606a73;
   border-color: #606a73;
 }
 .pagination > .active > a:hover {
-  background-color: #606a73;
-  border-color: #606a73;
+  background-color: #576e76;
+  border-color: #576e76;
 }
 .pagination > .active > span {
   background-color: #606a73;
   border-color: #606a73;
 }
 .pagination > .active > span:focus {
-  background-color: #606a73;
-  border-color: #606a73;
+  background-color: #576e76;
+  border-color: #576e76;
 }
 .pagination > .active > span:hover {
-  background-color: #606a73;
-  border-color: #606a73;
+  background-color: #576e76;
+  border-color: #576e76;
 }
 .pagination > li > a {
   color: #606a73;
@@ -1836,7 +1836,7 @@ sub.pointer {
   cursor: pointer;
 }
 sub.pointer:hover {
-  color: #606a73;
+  color: #576e76;
 }
 .report-custom-header {
   padding: 0.3em 0.5em;
@@ -1900,7 +1900,7 @@ sub.pointer:hover {
   font-size: 0.9em;
 }
 #consentContainer a:hover {
-  color: #606a73;
+  color: #576e76;
 }
 .consent-checkbox {
   margin-left: -2px;
@@ -1917,7 +1917,7 @@ sub.pointer:hover {
   text-decoration: underline;
 }
 #profileConsentList a:hover {
-  color: #606a73;
+  color: #576e76;
 }
 #profileConsentList .consentlist-header {
   background-color: #8a8e90;
