fix JS runtime error related to patient report, css fix

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1477,6 +1477,7 @@ div.noOrg-container span {
 }
 #userSessionListTable TH,
 table.profile-audit-log TH,
+#profilePatientReportTable TH,
 .thead {
   background-color: #8a8e90;
   color: #FFF;
