--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -903,7 +903,7 @@
                             sortable: true
                         }, {
                             field: 'uploaded_at',
-                            title: 'Uploaded At' + (userTimeZone == "UTC" ? " (GMT)" : ""),
+                            title: 'Uploaded At (GMT)',
                             sortable: true,
                             searchable: true,
                             width: '20%'
