--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1607,7 +1607,7 @@ div.noOrg-container {
 }
 
 
-#userSessionListTable TH, table.profile-audit-log TH, .thead {
+#userSessionListTable TH, table.profile-audit-log TH, #profilePatientReportTable TH, .thead {
   background-color: @rowBackgroundColor;
   color: #FFF;
   padding: 0.25em 0.5em;
